--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
           <li><a href="https://www.instagram.com/weslley_richardi/?__coig_restricted=1" target="_blank">Me segue no instagram</a></li>
 
-          <li><a href="https://github.com/weslleyrichardi" target="_blank">Veja meu portfólio</a></li>
-          <li><a href=";.8" target="_blank">Conheça o Explorer</a></li>
+          <li><a href="https://github.com/weslleyrichardi?tab=repositories" target="_blank">Veja meus projetos</a></li>
+          <li><a href="https://github.com/weslleyrichardi" target="_blank">Acesse meu perfil do GitHub</a></li
         </ul>
       </div>
       <div id="social_links">
