--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="https://github.com/weslleyrichardi" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://instagram.com/weslley_richardi" target="_blank">
+        <a href="https://instagram.com/dev.weslleyrichard" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
         <a href="https://www.youtube.com/@level_2." target="_blank">
