--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redes sociais</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="style/avatar.png" type="image/png">
   </head>
   <body>
 
