--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
           <li><a href="https://www.facebook.com/wesley.freire.5836/" target="_blank">Seja meu amigo no facebook</a></li>
 
-          <li><a href="https://www.instagram.com/weslley_richardi/?__coig_restricted=1" target="_blank">Me segue no instagram</a></li>
+          <li><a href="https://www.instagram.com/dev.weslleyrichard/?__coig_restricted=1" target="_blank">Me segue no instagram</a></li>
 
           <li><a href="https://github.com/weslleyrichardi?tab=repositories" target="_blank">Veja meus projetos</a></li>
           <li><a href="https://github.com/weslleyrichardi" target="_blank">Acesse meu perfil do GitHub</a></li
@@ -39,7 +39,7 @@
         <a href="https://instagram.com/dev.weslleyrichard" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://www.youtube.com/@level_2." target="_blank">
+        <a href="https://www.youtube.com/@dev.weslleyrichard" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
         <a href="https://www.linkedin.com/in/weslley-richard/" target="_blank">
