--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
       </div>
       <div id="links">
         <ul>
-          <li><a href="https://www.facebook.com/wesley.freire.5836/" target="_blank">Seja meu amigo no facebook</a></li>
-
+          <li><a href="https://youtube.com/@dev.weslleyrichard" target="_blank">Inscreva-se no meu canal novo</a></li>
           <li><a href="https://www.instagram.com/dev.weslleyrichard/?__coig_restricted=1" target="_blank">Me segue no instagram</a></li>
-
           <li><a href="https://github.com/weslleyrichardi?tab=repositories" target="_blank">Veja meus projetos</a></li>
           <li><a href="https://github.com/weslleyrichardi" target="_blank">Acesse meu perfil do GitHub</a></li
+          <li><a href="https://www.facebook.com/wesley.freire.5836/" target="_blank">Seja meu amigo no facebook</a></li>
         </ul>
       </div>
       <div id="social_links">
