--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
         <img src="style/avatar.png" alt="img profile">
         <p>@weslley_richardi</p>
       </div>
-      <div id="switch">
+
+      <div id="switch" onclick="toggleMode()">
         <button><img src="style/moon-stars.svg" alt=""></button>
         <span></span>
       </div>
+
       <div id="links">
         <ul>
           <li><a href="https://youtube.com/@dev.weslleyrichard" target="_blank">Inscreva-se no meu canal novo</a></li>
           <li><a href="https://www.instagram.com/dev.weslleyrichard/?__coig_restricted=1" target="_blank">Me segue no instagram</a></li>
           <li><a href="https://github.com/weslleyrichardi?tab=repositories" target="_blank">Veja meus projetos</a></li>
-          <li><a href="https://github.com/weslleyrichardi" target="_blank">Acesse meu perfil do GitHub</a></li
+          <li><a href="https://github.com/weslleyrichardi" target="_blank">Acesse meu perfil do GitHub</a></li>
         </ul>
       </div>
       <div id="social_links">
@@ -52,6 +54,8 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+    <script src="script.js"></script>
 
   </body>
 </html>
