--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="conteiner">
       <div id="profile">
         <img src="style/avatar.png" alt="img profile">
-        <p>@weslley_richardi</p>
+        <p>@dev.weslleyrichard</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
