--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul>
           <li><a href="https://youtube.com/@dev.weslleyrichard" target="_blank">Inscreva-se no meu canal novo</a></li>
           <li><a href="https://www.instagram.com/dev.weslleyrichard/?__coig_restricted=1" target="_blank">Me segue no instagram</a></li>
-          <li><a href="https://github.com/weslleyrichardi?tab=repositories" target="_blank">Veja meus projetos</a></li>
+          <li><a href="https://www.linkedin.com/in/weslley-richard/" target="_blank">Meu perfil do linkedin</a></li>
           <li><a href="https://github.com/weslleyrichardi" target="_blank">Acesse meu perfil do GitHub</a></li>
         </ul>
       </div>
