Arvore de links 1.0
Primeira versão da arvore de links para o cliente do instagram @milionario_positivo_

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redes sociais</title>
+    <title>Milionário Positivo</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="style/avatar.png" type="image/png">
   </head>
@@ -16,46 +16,30 @@
     <div id="conteiner">
       <div id="profile">
         <img src="style/avatar.png" alt="img profile">
-        <p>@dev.weslleyrichard</p>
+        <p><a href="https://www.instagram.com/milionario_positivo_/" style="text-decoration: none;">@milionario_positivo_</a></p>
       </div>
-
-      <div id="switch" onclick="toggleMode()">
-        <button><img src="style/moon-stars.svg" alt=""></button>
-        <span></span>
-      </div>
-
+    
       <div id="links">
         <ul>
-          <li><a href="https://youtube.com/@dev.weslleyrichard" target="_blank">Inscreva-se no meu canal novo</a></li>
-          <li><a href="https://www.instagram.com/dev.weslleyrichard/?__coig_restricted=1" target="_blank">Me segue no instagram</a></li>
-          <li><a href="https://www.linkedin.com/in/weslley-richard/" target="_blank">Meu perfil do linkedin</a></li>
-          <li><a href="https://github.com/weslleyrichardi" target="_blank">Acesse meu perfil do GitHub</a></li>
+          <li><a href="https://kiwify.app/LRgaamc?afid=9G1bsoPG" target="_blank"><p>De <s>R$197</s> por <strong><span>R$19,90</span></strong> - Vagas Limitadas - Vendas no automático</p></a></li>
+          <li><a href="https://pay.kiwify.com.br/4ccylZO?afid=9G1bsoPG"><p>De <s>R$210</s> por <strong><span>R$29,90</span></strong> - Últimas Vagas Promocionais - 1° venda em 1 dia</p></a></li>
+          <li><a href="https://pay.kiwify.com.br/nV2UysL?afid=9G1bsoPG" target="_blank"><p>De <s>R$280</s> por apenas <strong><span>R$47</span></strong> - Acesso Imediato e Vitalício - 1° venda em 2h</p></a></li>
+          <li><a href="#" target="_blank"><p><strong>+ cursos imperdíveis dia 29 de janeiro</strong></p></a></li>
         </ul>
       </div>
-      <div id="social_links">
-        <a href="https://github.com/weslleyrichardi" target="_blank">
-          <ion-icon name="logo-github"></ion-icon>
-        </a>
-        <a href="https://instagram.com/dev.weslleyrichard" target="_blank">
+      <div id="social_links" style="
+      padding-bottom: 0px;
+      padding-top: 0px;">
+        <a href="https://www.instagram.com/milionario_positivo_/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://www.youtube.com/@dev.weslleyrichard" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
-        </a>
-        <a href="https://www.linkedin.com/in/weslley-richard/" target="_blank">
-          <ion-icon name="logo-linkedin"></ion-icon>
-        </a>
       </div>
-      <footer>
-        <p>Projeto "Redes sociais" de <a href="https://instagram.com/weslley_richardi" target="_blank" target="_blank">Weslley Richard</a></p>
-        <p>Curso da <underline>Rocketseat</underline></p>
+      <footer style="padding-top: 0px;"">
+        <p>Desenvolvedor do site <a href="https://instagram.com/weslley_richardi" target="_blank" target="_blank">Weslley Richard</a></p>
       </footer>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
-    <script src="script.js"></script>
-
   </body>
 </html>
