--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;500&display=swap" rel="stylesheet">
-
+ 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Milionário Positivo</title>
@@ -12,19 +12,17 @@
     <link rel="shortcut icon" href="style/avatar.png" type="image/png">
   </head>
   <body>
-
     <div id="conteiner">
       <div id="profile">
         <img src="style/avatar.png" alt="img profile">
         <p><a href="https://www.instagram.com/milionario_positivo_/" style="text-decoration: none;">@milionario_positivo_</a></p>
       </div>
-    
       <div id="links">
         <ul>
           <li><a href="https://kiwify.app/LRgaamc?afid=9G1bsoPG" target="_blank"><p>De <s>R$197</s> por <strong><span>R$19,90</span></strong> - Vagas Limitadas - Vendas no automático</p></a></li>
           <li><a href="https://pay.kiwify.com.br/4ccylZO?afid=9G1bsoPG"><p>De <s>R$210</s> por <strong><span>R$29,90</span></strong> - Últimas Vagas Promocionais - 1° venda em 1 dia</p></a></li>
           <li><a href="https://pay.kiwify.com.br/nV2UysL?afid=9G1bsoPG" target="_blank"><p>De <s>R$280</s> por apenas <strong><span>R$47</span></strong> - Acesso Imediato e Vitalício - 1° venda em 2h</p></a></li>
-          <li><a href="#" target="_blank"><p><strong>+ cursos imperdíveis dia 29 de janeiro</strong></p></a></li>
+          <li><a href="#"><p><strong>+ cursos imperdíveis dia 29 de janeiro</strong></p></a></li>
         </ul>
       </div>
       <div id="social_links" style="
@@ -34,8 +32,8 @@
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
       </div>
-      <footer style="padding-top: 0px;"">
-        <p>Desenvolvedor do site <a href="https://instagram.com/weslley_richardi" target="_blank" target="_blank">Weslley Richard</a></p>
+      <footer style="padding-top: 0px;">
+        <p>Desenvolvedor do site, <a href="https://instagram.com/weslley_richardi" target="_blank" target="_blank">Weslley Richard</a></p>
       </footer>
     </div>
 
